[package]
name = "nih_reverb"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[workspace]
members = ["xtask", "plugin-biquad"]

[features]
vst3 = []

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    'simd',
] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rand = "0.8.5"

[profile.release]
lto = false
incremental = false
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
lto = false

[profile.dev."nih_plug"]
opt-level = 3

[dev-dependencies]
approx = "0.5.1"
